--- a/src/main/resources/assets/lunatic/lang/en_us.json
+++ b/src/main/resources/assets/lunatic/lang/en_us.json
@@ -1,1 +1,4 @@
-{}
+{
+  "enchantment.lunatic.dream_repair": "Dream Repair",
+  "enchantment.lunatic.dream_repair.desc": "Item repairs after sleep."
+}
